# TruOps

./: .gitignore  README.md
backend/: pyproject.toml  railway.json
backend/data/: nist_csf_2_0.json
backend/src/: analyzer.py  assessor.py  cli.py  config.py  framework.py  models.py  nvd_client.py  pipeline.py  report.py  sources.py
backend/src/api/: app.py  jobs.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assessments/[jobId]/: page.tsx
frontend/app/reports/[reportId]/: page.tsx
frontend/components/: AssessmentForm.tsx  PostureReport.tsx  RunProgress.tsx  ThemeToggle.tsx  ui.tsx
frontend/lib/: api.ts  types.ts  useAssessmentStream.ts
